Padronizando o nome dos alertas

--- a/ContentWeb/public/dashBoard/dashBoard.html
+++ b/ContentWeb/public/dashBoard/dashBoard.html
@@ -116,19 +116,19 @@
             <h2>Sens.1</h2>
             <i class="fa fa-solid fa-temperature-low"></i>
 
-            <div id="card_1text" class="divInfoAlarm critico">CRÍTICO</div>
+            <div id="card_1text" class="divInfoAlarm critico">Crítico</div>
           </div>
           <!-- sensor 2 -->
           <div id="card_2" onclick="botao2()" class="itemCardAlarm normal">
             <h2>Sens.2</h2>
             <i class="fa fa-solid fa-temperature-low"></i>
-            <div id="card_2text" class="divInfoAlarm normal">ESTÁVEL</div>
+            <div id="card_2text" class="divInfoAlarm normal">Normal</div>
           </div>
           <!-- sensor3 -->
           <div id="card_5" onclick="botao5()" class="itemCardAlarm normal">
             <h2>Sens.3</h2>
             <i class="fa fa-solid fa-temperature-low"></i>
-            <div id="card_5text" class="divInfoAlarm normal">ESTÁVEL</div>
+            <div id="card_5text" class="divInfoAlarm normal">Normal</div>
           </div>
 
           <!-- Umidade -->
@@ -136,20 +136,20 @@
           <div id="card_3" onclick="botao3()" class="itemCardAlarm alerta">
             <h2>Sens.1</h2>
             <i class="fa fa-solid fa-water"></i>
-            <div id="card_3text" class="divInfoAlarm alerta">ALERTA</div>
+            <div id="card_3text" class="divInfoAlarm alerta">Alerta</div>
           </div>
 
           <!-- sensor2 -->
           <div id="card_4" onclick="botao4()" class="itemCardAlarm alerta">
             <h2>Sens.2</h2>
             <i class="fa fa-solid fa-water"></i>
-            <div id="card_4text" class="divInfoAlarm alerta">ALERTA</div>
+            <div id="card_4text" class="divInfoAlarm alerta">Alerta</div>
           </div>
           <!-- sensor3 -->
           <div id="card_6" onclick="botao6()" class="itemCardAlarm normal">
             <h2>Sens.3</h2>
             <i class="fa fa-solid fa-water"></i>
-            <div id="card_6text" class="divInfoAlarm normal">ESTÁVEL</div>
+            <div id="card_6text" class="divInfoAlarm normal">Normal</div>
           </div>
 
         </div>
@@ -294,8 +294,8 @@
       console.log("caiu no 2")
     }
     else if (temperaturaSens1 < limitesTemperatura.quente && temperaturaSens1 > limitesTemperatura.frio) {
-      texto1 = "normal"
-      texto2 = "normal"
+      texto1 = "Normal"
+      texto2 = "Normal"
       // realTemp.style.color="#2DB5B2"
       classe_temperatura = 'itemCardAlarm normal';
       classe_temperaturaText = 'divInfoAlarm normal'
@@ -390,8 +390,8 @@
       console.log("caiu no 2")
     }
     else if (temperaturaSens2 < limitesTemperatura.quente && temperaturaSens2 > limitesTemperatura.frio) {
-      texto1 = "normal"
-      texto2 = "normal"
+      texto1 = "Normal"
+      texto2 = "Normal"
       // realTemp.style.color="#2DB5B2"
       classe_temperatura = 'itemCardAlarm normal';
       classe_temperaturaText = 'divInfoAlarm normal'
@@ -491,8 +491,8 @@
       console.log("caiu no 2")
     }
     else if (temperaturaSens3 < limitesTemperatura.quente && temperaturaSens3 > limitesTemperatura.frio) {
-      texto1 = "normal"
-      texto2 = "normal"
+      texto1 = "Normal"
+      texto2 = "Normal"
       // realTemp.style.color="#2DB5B2"
       classe_temperatura = 'itemCardAlarm normal';
       classe_temperaturaText = 'divInfoAlarm normal'
@@ -662,8 +662,8 @@
       console.log("caiu no 2")
     }
     else if (umidadeSens1 < limitesUmidade.acima_umido && umidadeSens1 > limitesUmidade.abaixo_umido) {
-      texto1 = "normal"
-      texto2 = "normal"
+      texto1 = "Normal"
+      texto2 = "Normal"
       // realTemp.style.color="#2DB5B2"
       classe_temperatura = 'itemCardAlarm normal';
       classe_temperaturaText = 'divInfoAlarm normal'
@@ -765,8 +765,8 @@
       console.log("caiu no 2")
     }
     else if (umidadeSens2 < limitesUmidade.acima_umido && umidadeSens2 > limitesUmidade.abaixo_umido) {
-      texto1 = "normal"
-      texto2 = "normal"
+      texto1 = "Normal"
+      texto2 = "Normal"
       // realTemp.style.color="#2DB5B2"
       classe_temperatura = 'itemCardAlarm normal';
       classe_temperaturaText = 'divInfoAlarm normal'
@@ -863,8 +863,8 @@
       console.log("caiu no 2")
     }
     else if (umidadeSens3 < limitesUmidade.acima_umido && umidadeSens3 > limitesUmidade.abaixo_umido) {
-      texto1 = "normal"
-      texto2 = "normal"
+      texto1 = "Normal"
+      texto2 = "Normal"
       // realTemp.style.color="#2DB5B2"
       classe_temperatura = 'itemCardAlarm normal';
       classe_temperaturaText = 'divInfoAlarm normal'
