Ultimos ajustes no dashboard pronto pra deploy

--- a/ContentWeb/public/dashBoard/dashBoard.html
+++ b/ContentWeb/public/dashBoard/dashBoard.html
@@ -35,18 +35,18 @@
         <i class="fa fa-solid fa-cloud-sun"></i>
         <a href="">Gráficos</a>
       </div>
-      <div class="divItemSide">
-        <i class="fa fa-regular fa-money-bill"></i>
-        <a href="rendimentos.html">Rendimentos</a>
-      </div>
+      <!-- <div class="divItemSide">
+      <i class="fa fa-regular fa-money-bill"></i>
+        <a href="rendimentos.html">Rendimentos</a>  
+      </div> -->
     </div>
     <div class="configs">
       <div class="divitemsConfigs">
         <div class="divItemConf">
           <i class="fa fa-solid fa-door-open" onclick="limparSessao()"></i>
         </div>
-        <div class="divItemConf">
-          <i class="fa fa-solid fa-gear"></i>
+        <!-- <div class="divItemConf">
+          <i class="fa fa-solid fa-gear"></i> -->
         </div>
       </div>
     </div>
@@ -58,10 +58,10 @@
         <img src="./imgs/metricas.png" alt="" />
       </div>
       <div class="divNavtime">
-        <div class="divHora">10:15 AM</div>
-        <div class="divData">17/04/22</div>
+        <div class="divHora"></div>
+        <div class="divData"><b>02/05/22</b></div>
         <div class="divUser">
-          <img src="imgs/logo.png" alt="" />
+          <img src="imgs/logo.png" alt="" style="width: 50px"/>
         </div>
       </div>
     </div>
@@ -1277,4 +1277,8 @@
         );
       });
   }
+
+  
+
+
 </script>
